--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ToolmetricsRedux
 
+1.0.5.0 - Added CE-support based on 1.0 patch by Shadowpaw
+
+
 1.0.4.0 - Updated for 1.3, dependency not updated but verified to work.
 
 
