--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ToolmetricsRedux
 
+1.4.1 - Mod updated for 1.4 and passed autotests
+
+
 1.0.6.0 - CE-patch is now included in the main CE-mod instead
 
 
